--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -15,6 +15,12 @@
 			crossorigin="anonymous"
 		/>
 
+		<!-- Dygraph -->
+		<link
+			rel="stylesheet"
+			href="//cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css"
+		/>
+
 		<!-- Bootstrap -->
 		<!-- CSS -->
 		<link
@@ -164,8 +170,11 @@
 
 		<!-- Chart.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-		<!-- used for parsing date -->
+		<!-- used for parsing date in Chart.js -->
 		<script src="js/moment.js"></script>
+
+		<!-- Dygraph -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
 
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
