--- a/egs/voicehome/frontend/graph/index.html
+++ b/egs/voicehome/frontend/graph/index.html
@@ -1,114 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Line Chart</title>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
-		<style>
-			canvas {
-				-moz-user-select: none;
-				-webkit-user-select: none;
-				-ms-user-select: none;
-			}
-		</style>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Page Title</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.js"
+			integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+			crossorigin="anonymous"
+		></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
+		<link
+			rel="stylesheet"
+			href="//cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css"
+		/>
+		<script src="utils.js"></script>
 	</head>
-
 	<body>
-		<div style="width: 75%">
-			<canvas id="canvas"></canvas>
-		</div>
-		<script>
-			var timeFormat = "DD/MM/YYYY";
-
-			var config = {
-				type: "line",
-				data: {
-					datasets: [
-						{
-							label: "US Dates",
-							data: [
-								{
-									x: "04/01/2014",
-									y: 175,
-								},
-								{
-									x: "10/01/2014",
-									y: 175,
-								},
-								{
-									x: "04/01/2015",
-									y: 178,
-								},
-								{
-									x: "10/01/2015",
-									y: 178,
-								},
-							],
-							fill: false,
-							borderColor: "red",
-						},
-						{
-							label: "UK Dates",
-							data: [
-								{
-									x: "01/04/2014",
-									y: 175,
-								},
-								{
-									x: "01/10/2014",
-									y: 175,
-								},
-								{
-									x: "01/04/2015",
-									y: 178,
-								},
-								{
-									x: "01/10/2015",
-									y: 178,
-								},
-							],
-							fill: false,
-							borderColor: "blue",
-						},
-					],
-				},
-				options: {
-					responsive: true,
-					title: {
-						display: true,
-						text: "Chart.js Time Scale",
-					},
-					scales: {
-						xAxes: [
-							{
-								type: "time",
-								time: {
-									format: timeFormat,
-									tooltipFormat: "ll",
-								},
-								scaleLabel: {
-									display: true,
-									labelString: "Date",
-								},
-							},
-						],
-						yAxes: [
-							{
-								scaleLabel: {
-									display: true,
-									labelString: "value",
-								},
-							},
-						],
-					},
-				},
-			};
-
-			window.onload = function () {
-				var ctx = document.getElementById("canvas").getContext("2d");
-				window.myLine = new Chart(ctx, config);
-			};
-		</script>
+		<div id="div_g" style="width: 600px; height: 300px"></div>
 	</body>
 </html>
