--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -93,50 +93,9 @@
 				</ul>
 			</div>
 		</nav>
-
-		<div class="md-form mx-5 my-5">
-			<input
-				placeholder="Date and Time"
-				type="text"
-				data-open="picker2"
-				class="form-control date-time picker-opener"
-			/>
-			<input
-				placeholder="Selected date"
-				type="text"
-				id="picker2"
-				class="form-control time-date-ghost"
-			/>
-			<input
-				placeholder="Selected time"
-				data-open="picker2"
-				type="text"
-				class="form-control timepicker time-date-ghost"
-			/>
-		</div>
-
-		<div class="md-form mx-5 my-5">
-			<input
-				placeholder="Date and Time"
-				type="text"
-				data-open="picker3"
-				class="form-control date-time-2 picker-opener"
-			/>
-			<input
-				placeholder="Selected date"
-				type="text"
-				id="picker3"
-				class="form-control time-date-ghost"
-			/>
-			<input
-				placeholder="Selected time"
-				data-open="picker3"
-				type="text"
-				class="form-control timepicker time-date-ghost"
-			/>
-		</div>
+		<div id="filter-container"></div>
 		<div
-			class="chart-container"
+			id="chart-container"
 			style="position: relative; height: 40vh; width: 80vw"
 		>
 			<canvas id="myChart"></canvas>
