--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -37,9 +37,9 @@
 		/>
 
 		<!-- Scripts -->
-		<!-- <script type="text/javascript">
-			let ws;
-		</script> -->
+		<script type="text/javascript">
+			var ws = 0;
+		</script>
 		<script src="js/script.js" type="text/javascript"></script>
 	</head>
 
