--- a/egs/voicehome/frontend/analytics.html
+++ b/egs/voicehome/frontend/analytics.html
@@ -93,6 +93,14 @@
 				</ul>
 			</div>
 		</nav>
+		<style>
+			div.graph {
+				position: relative;
+				margin: auto;
+				height: 40vh;
+				width: 80vw;
+			}
+		</style>
 		<div id="filter-container"></div>
 		<div id="graph-confainer"></div>
 		<!-- Script for myChart -->
