--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -33,7 +33,7 @@
 
 	<body onload="onBodyLoad()">
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-			<a class="navbar-brand" href="#">IOT</a>
+			<a class="navbar-brand" href="/index.html">IOT</a>
 			<button
 				class="navbar-toggler"
 				type="button"
@@ -47,16 +47,17 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href="#"
-							>Home<span class="sr-only">(current)</span>
+					<li class="nav-item">
+						<a class="nav-link active" href="/index.html"
+							>Home
+							<!-- <span class="sr-only">(current)</span> -->
 						</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Switches</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Analytics</a>
+						<a class="nav-link" href="/analytics.html">Analytics</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a
