--- a/egs/voicehome/frontend/index.html
+++ b/egs/voicehome/frontend/index.html
@@ -88,6 +88,7 @@
 			<div id="modules" class="col-md-4 col-lg-3 d-md-block"></div>
 			<!-- <div id="modules" class="col-md-4 col-lg-3 d-none d-md-block"></div> -->
 			<div id="modules_information" class="col-md-8 col-lg-9 col-12"></div>
+			<!--<button onclick="turnModuleOnOff(true, 'sensors')">turn_on_off</button> -->
 		</div>
 		<!-- Bootstrap -->
 		<!-- jQuery and JS bundle w/ Popper.js -->
